--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="floating-pic">
-    <img src="" alt="profile_img">
+    <img src="res/maneken.jpg" alt="profile_img">
   </div>
   <div class="banner-bg">
 
