--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <img src="res/maneken.jpg" alt="profile_img">
   </div>
   <div class="banner-bg">
-
+  
   </div>
+  <div style="z-index: -10;display: inline-block;width: 100vw; height: 200px; position: absolute; top: 2rem; background-color: #77A1DC;"></div>
   <div class="content-container">
 
   </div>
