Add design further

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,16 +7,33 @@
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
   <div class="floating-pic">
     <img src="res/maneken.jpg" alt="profile_img">
   </div>
   <div class="banner-bg">
-  
+    <p>Miha Stele</p>
   </div>
-  <div style="z-index: -10;display: inline-block;width: 100vw; height: 200px; position: absolute; top: 2rem; background-color: #77A1DC;"></div>
+  <div
+    style="z-index: -10;display: inline-block;width: 100vw; height: 200px; position: absolute; top: 2rem; background-color: #77A1DC;">
+
+  </div>
   <div class="content-container">
+
+    <div class="block-container">
+      <div class="container-element">
+        <span class="banner-img">
+          <img src="vendors/openmoji/1F9D8.svg"></img>
+        </span>
+        <span class="title-serv"></span>
+        <div class="desc-serv">
+
+        </div>
+      </div>
+    </div>
 
   </div>
 </body>
+
 </html>
