Add bio description draft

--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
     style="z-index: -10;display: inline-block;width: 100vw; height: 200px; position: absolute; top: 2rem; background-color: #77A1DC;">
 
   </div>
+  
   <div class="content-container">
+    <section id="bio">
+      <h1>
+        About me
+      </h1>
+      <p>
+        I am currently employed as a Full Stack Software Developer at Amebis d.o.o. and I don't just do Software (Where I am mostly experienced as Java and Web developer), I tend to cover a wide range of knowledge. I am working for more than 3 years now professionally and I constantly learn new things and try new things as hobby. My interests include Software Development, Software Testing, IT Administraion/Operations, DevSecOps, Penetration Testing, Database Management, Leadership, Well-being, Basics of Electrical Engineering, Quick Sketching and more.
+      </p>
+    </section>
 
     <div class="block-container">
       <div class="container-element">
         <span class="banner-img">
-          <img src="vendors/openmoji/1F9D8.svg"></img>
+          <img src="vendors/openmoji/1F9D8gray.svg"></img>
         </span>
         <span class="title-serv"></span>
         <div class="desc-serv">
